--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,6 +20,11 @@
     </head>
     <body>
         @@include("../blocks/header/header.html")
+        @@include("../blocks/features/features.html")
+        @@include("../blocks/works/works.html")
+        @@include("../blocks/team/team.html")
+        @@include("../blocks/clients/clients.html")
+        @@include("../blocks/download/download.html")
         @@include("../blocks/footer/footer.html")
         <script src="../js/main.js"></script>
     </body>
