--- a/src/blocks/_blocks.scss
+++ b/src/blocks/_blocks.scss
@@ -1,2 +1,8 @@
 @import "header/header";
 @import "footer/footer";
+@import "features/features";
+@import "works/works";
+@import "team/team";
+@import "clients/clients";
+@import "download/download";
+@import "footer/footer";
